@@ -5,6 +5,7 @@ This release improves the spec command line by adding DRb support to and making 
 store command line options in a file. This means a more flexible RSpec experience with Rails, 
 Rake and editor plugins like TextMate.
 
+* Fixed [#7565] Subsequent stub! calls for method fail to override the first call to method
 * Applied [#7524] Incorrect Documentation for 'pattern' in Rake task (patch from Stephen Duncan)
 * Fixed [#7409] default fixtures do not appear to run.
 * Fixed [#7507] "render..and return" doesn't return
